# clcomx

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  preview.html  tsconfig.json  vite.config.ts  vitest.e2e.config.ts
.agent-works/: 20260425-next-refactor-plan.md
scripts/: build-dev.sh  build-windows.sh  dev.sh  e2e-smoke-windows.ps1  e2e-smoke-windows.sh  package-portable-windows.ps1  win-env.sh  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: tmux_proxy.py
src-tauri/src/: app_env.rs  lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  editors.rs  external.rs  fonts.rs  mod.rs  pty.rs  settings.rs  tmux.rs  window_runtime.rs  workspace.rs  wsl.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/bootstrap/: mod.rs
src-tauri/src/features/editors/: detection.rs  editor_launch.rs  file_policy.rs  mod.rs  path_resolution.rs  search_index.rs  session_files.rs  types.rs
src-tauri/src/features/editors/detection/: tests.rs
src-tauri/src/features/editors/file_policy/: tests.rs
src-tauri/src/features/editors/search_index/: tests.rs
src-tauri/src/features/editors/session_files/: tests.rs
src-tauri/src/features/history/: mod.rs
src-tauri/src/features/settings/: mod.rs
src-tauri/src/features/terminal/: mod.rs  parsing.rs  tests.rs
src-tauri/src/features/theme/: mod.rs
src-tauri/src/features/workspace/: mod.rs  service.rs  state.rs  store.rs  types.rs
src-tauri/src/features/workspace/service/: session_ops.rs  window_ops.rs
(+340 files in other folders)
