[package]
name = "clcomx"
version = "0.5.2"
description = "A lightweight multi-agent GUI wrapper for terminal coding assistants"
authors = ["CLCOMX"]
edition = "2021"

[lib]
name = "clcomx_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = { path = "../vendor/portable-pty" }
tokio = { version = "1", features = ["sync", "macros"] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Globalization",
  "Win32_Graphics_DirectWrite",
  "Win32_System_Registry",
] }
